--- a/TTNote/app/src/main/res/values/strings.xml
+++ b/TTNote/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_note">Note</string>
-    <string name="menu_mission">Mission</string>
+    <string name="menu_task">Task</string>
     <string name="menu_remind">Remind</string>
     <string name="menu_recycle_bin">Recycle Bin</string>
     <string name="menu_setting">Setting</string>
