--- a/TTNote/app/src/main/res/values/strings.xml
+++ b/TTNote/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="menu_remind">Remind</string>
     <string name="menu_recycle_bin">Recycle Bin</string>
     <string name="menu_setting">Setting</string>
-    <string name="menu_help">Helps</string>
+    <string name="menu_help">About Us</string>
 </resources>
